# ontofact_nav

./: .gitignore  LICENSE  README.md  __init__.py  affordance.py  api.py  counterfactual.py  domain.py  main.py  navigation.py  ontology.py  orchestrator.py  pyproject.toml  requirements.txt  visualization.py
scenarios/: hospital.py  warehouse.py
src/ontofact_nav/: __init__.py  __main__.py  affordance.py  api.py  classification.py  config.py  counterfactual.py  domain.py  explanation.py  main.py  navigation.py  ontology.py  orchestrator.py
src/ontofact_nav/scenarios/: hospital.py  warehouse.py
tests/: conftest.py  test_affordance.py  test_api.py  test_classification.py  test_config.py  test_counterfactual.py  test_counterfactual_attribution.py  test_counterfactual_minimal.py  test_navigation.py  test_ontology.py  test_ontology_load_bearing.py  test_passability_ssot.py
